fix ui uncollapsing

--- a/src/css/caveview.scss
+++ b/src/css/caveview.scss
@@ -716,6 +716,7 @@ div.cv-frame::-webkit-scrollbar-button:end {
 }
 
 .container_full {
+	max-height: 500px;
 	overflow: hidden;
 	transition: max-height $animation-speed ease-in;
 }
